2024-11-25  Rodolphe  <rodo@smw>

	* Change the function log_ddl()

	* Add a new table ddl_history_column