@@ -20,9 +20,16 @@ BEGIN
      -- log columns for new tables
      --
      IF tg_tag = 'CREATE TABLE' AND r.object_type = 'table' THEN
-       INSERT INTO @extschema@.ddl_history_column (attrelid, tablename, columnname)
-       SELECT attrelid, r.object_identity, attname FROM pg_attribute
+       INSERT INTO @extschema@.ddl_history_column (attrelid, tablename, columnname, attnum)
+       SELECT attrelid, r.object_identity, attname, attnum FROM pg_attribute
        WHERE attnum > 0 AND attrelid = r.objid;
+     END IF;
+
+     IF tg_tag = 'ALTER TABLE' AND r.object_type = 'table' THEN
+       INSERT INTO @extschema@.ddl_history_column (attrelid, tablename, columnname, attnum)
+       SELECT attrelid, r.object_identity, attname, attnum FROM pg_attribute
+       WHERE attnum > 0 AND NOT attisdropped AND attrelid = r.objid
+       ON CONFLICT DO NOTHING;
      END IF;
 
   END LOOP;
@@ -46,10 +53,16 @@ BEGIN
       INSERT INTO @extschema@.ddl_history (ddl_date, objoid, objsubid, ddl_tag, object_name, ddl_command, otype, username, trg_name, txid )
       VALUES (statement_timestamp(), r.objid, r.objsubid, tg_tag, r.object_identity, s, r.object_type, current_user, 'sql_drop', txid_current() );
      --
-     -- drop columns
+     -- drop table
      --
      IF tg_tag = 'DROP TABLE' AND r.object_type = 'table' THEN
        DELETE FROM @extschema@.ddl_history_column WHERE tablename = r.object_identity;
+     END IF;
+     --
+     -- alter table drop column
+     --
+     IF tg_tag = 'ALTER TABLE' AND r.object_type = 'table column' THEN
+       DELETE FROM @extschema@.ddl_history_column WHERE attrelid = r.objid AND attnum=r.objsubid;
      END IF;
     END LOOP;
 END;
